--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,21 +1,24 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
-        <a class="navbar-brand">Dating App</a>
-        @if(isLoggedIn) {
+        <a class="navbar-brand" routerLink="/">Dating App</a>
+        @if((accountService.currenUser$| async); as user) {
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link">Matches</a>
+                    <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Lists</a>
+                    <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Messages</a>
+                    <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
                 </li>
             </ul>
 
             <div class="dropdown" dropdown>
-                <a class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
+                <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{ user.username }}</a>
                 <div class="dropdown-menu" *dropdownMenu>
                     <a class="dropdown-item">Edit Profile</a>
                     <a class="dropdown-item" (click)="logout()">Logout</a>
@@ -36,7 +39,7 @@
                     class="form-control me-2" 
                     type="password" 
                     placeholder="Password">
-                <button class="btn btn-outline-success" type="submit">Login</button>
+                <button class="btn btn-success" type="submit">Login</button>
             </form>
         }
     </div>
