--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -18,9 +18,10 @@
             </ul>
 
             <div class="dropdown" dropdown>
-                <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{ user.username }}</a>
+                <img src="{{user.photoUrl || './assets/user.png'}}" alt="user photo">
+                <a class="dropdown-toggle text-light ms-2" dropdownToggle>Welcome {{ user.username }}</a>
                 <div class="dropdown-menu" *dropdownMenu>
-                    <a class="dropdown-item">Edit Profile</a>
+                    <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
                     <a class="dropdown-item" (click)="logout()">Logout</a>
                 </div>   
             </div>
