--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,39 +1,59 @@
-<form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
-    <h2 class="text-center text-primary">Sign Up</h2>
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
+    <h2 class="text-center text-primary">Sign up</h2>
     <hr>
+  
     <div class="mb-3">
-        <label style="margin-right: 10px">I am a: </label>
-        <label for="" class="form-check-label">
-            <input type="radio" class="form-check-input" value="male" formControlName="gender"> Male 
-        </label>
-        <label for="" class="form-check-label">
-            <input type="radio" class="form-check-input ms-3" value="female" formControlName="gender"> Female 
-        </label>
+      <label style="margin-right: 10px;">I am a: </label>
+      <label class="form-check-label">
+        <input type="radio" class="form-check-input" value="male" formControlName="gender"> Male
+      </label>
+      <label class="form-check-label">
+        <input type="radio" class="form-check-input" value="female" formControlName="gender"> Female
+      </label>
     </div>
+  
     <app-text-input [formControl]="$any(registerForm.controls['username'])" 
-        [label]="'Username'"></app-text-input>
+      [label]="'Username'">
+    </app-text-input>
+  
     <app-text-input [formControl]="$any(registerForm.controls['knownAs'])" 
-        [label]="'Known As'"></app-text-input>
-    <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])"
-        [label]="'Date of Birth'" [maxDate]="maxDate"></app-date-picker>
+    [label]="'Known as'">
+    </app-text-input>
+  
+    <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])" 
+    [label]="'Date of birth'" [maxDate]="maxDate">
+    </app-date-picker>
+  
     <app-text-input [formControl]="$any(registerForm.controls['city'])" 
-        [label]="'City'"></app-text-input>
+    [label]="'City'">
+    </app-text-input>
+  
     <app-text-input [formControl]="$any(registerForm.controls['country'])" 
-        [label]="'Country'"></app-text-input>
+    [label]="'Country'">
+    </app-text-input>
+  
     <app-text-input [formControl]="$any(registerForm.controls['password'])" 
-        [label]="'Password'" 
-        [type]="'password'"></app-text-input>
+      [label]="'Password'"
+      [type]="'password'">
+    </app-text-input>
+  
     <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])" 
-        [label]="'Confirm Password'"
-        [type]="'password'"></app-text-input>
-    <div class="row" *ngIf="validationError">
-        <ul class="text-danger">
-            <li *ngFor="let error of validationError">{{ error }}</li>
+      [label]="'Confirm password'"
+      [type]="'password'">
+    </app-text-input>
+  
+    @if (validationErrors) {
+      <div class="alert alert-danger text-start">
+        <ul>
+          @for (error of validationErrors; track $index) {
+            <li>{{error}}</li>
+          }
         </ul>
+      </div>
+    }
+  
+    <div class="form-group text-center">
+      <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Register</button>
+      <button class="btn btn-default me-2" (click)="cancel()" type="button">Cancel</button>
     </div>
-    <div class="text-center">
-        <button class="btn btn-success me-2" type="submit">Register</button>
-        <button class="btn btn-default" type="submit" (click)="cancel()">Cancel</button>
-    </div>
-</form>
-
+  </form>
