--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,5 @@
 <div class="row" style="margin-top: 150px;">
-    @for(member of members$ | async; track member){
+    @for(member of members; track member){
         <div class="col-2">
             <member-card [member]="member"></member-card>
         </div>
