--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
 
             <div class="dropdown" dropdown>
                 <img src="{{user.photoUrl || './assets/user.png'}}" alt="user photo">
-                <a class="dropdown-toggle text-light ms-2" dropdownToggle>Welcome {{ user.username }}</a>
+                <a class="dropdown-toggle text-light ms-2" dropdownToggle>Welcome {{ user.knownAs }}</a>
                 <div class="dropdown-menu" *dropdownMenu>
                     <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
                     <a class="dropdown-item" (click)="logout()">Logout</a>
