--- a/src/app/members/member-card/member-card.component.html
+++ b/src/app/members/member-card/member-card.component.html
@@ -6,7 +6,13 @@
                 <li class="list-inline-item">
                     <button class="btn btn-primary" routerLink="/members/{{member.userName}}"><i class="fa fa-user"></i></button>
                     <button class="btn btn-primary" (click)="addLike(member)"><i class="fa fa-heart"></i></button>
-                    <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>  
+                    <button 
+                        class="btn btn-primary"
+                        routerLink="/members/{{member.userName}}"
+                        [queryParams]="{tab: 'Messages'}"
+                    >
+                        <i class="fa fa-envelope"></i>
+                    </button>  
                 </li>
             </ul>
         </div>
