--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -1,54 +1,52 @@
-@if(member){
-    <div class="row">
-        <div class="col-4">
-            <div class="card">
-                <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
-                <div class="card-body">
-                    <div>
-                        <strong>Location:</strong>
-                        <p>{{member.city}}, {{member.country}}</p>
-                    </div>
-                    <div>
-                        <strong>Age:</strong>
-                        <p>{{member.age}}</p>
-                    </div>
-                    <div>
-                        <strong>Last Active:</strong>
-                        <p>{{ member.lastActive + 'Z' | timeago}}</p>
-                    </div>
-                    <div>
-                        <strong>Member since:</strong>
-                        <p>{{ member.created | date: "dd MMM yyyy"}}</p>
-                    </div>
-                </div>  
-                <div class="card-footer">
-                    <button class="btn btn-primary">Like</button>
-                    <button class="btn btn-success">Message</button>
+<div class="row">
+    <div class="col-4">
+        <div class="card">
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
+            <div class="card-body">
+                <div>
+                    <strong>Location:</strong>
+                    <p>{{member.city}}, {{member.country}}</p>
                 </div>
+                <div>
+                    <strong>Age:</strong>
+                    <p>{{member.age}}</p>
+                </div>
+                <div>
+                    <strong>Last Active:</strong>
+                    <p>{{ member.lastActive + 'Z' | timeago}}</p>
+                </div>
+                <div>
+                    <strong>Member since:</strong>
+                    <p>{{ member.created | date: "dd MMM yyyy"}}</p>
+                </div>
+            </div>  
+            <div class="card-footer">
+                <button class="btn btn-primary">Like</button>
+                <button class="btn btn-success" (click)="selectTab('Messages')">Message</button>
             </div>
         </div>
+    </div>
 
-        <div class="col-8">
-            <tabset class="member-tabset">
-                <tab heading="About {{ member.knownAs }}">
-                    <h4>Description</h4>
-                    <p>{{ member.introduction }}</p>
-                    <h4>LookingFor</h4>
-                    <p>{{ member.lookingFor }}</p>
-                </tab>
-                <tab heading="Interests">
-                    <h4>Interests</h4>
-                    <p>{{ member.interests }}</p>
-                </tab>
-                <tab heading="Photos" #photoTab="tab" class="gallery">
-                    @if(photoTab.active){
-                        <gallery [items]="images"></gallery>
-                    }
-                </tab>
-                <tab heading="Messages">
-                    <p>Messages will go here</p>
-                </tab>
-            </tabset>
-        </div>
-    </div> 
-}
+    <div class="col-8">
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading="About {{ member.knownAs }}" (selectTab)="onTabActivated($event)">
+                <h4>Description</h4>
+                <p>{{ member.introduction }}</p>
+                <h4>LookingFor</h4>
+                <p>{{ member.lookingFor }}</p>
+            </tab>
+            <tab heading="Interests">
+                <h4>Interests</h4>
+                <p>{{ member.interests }}</p>
+            </tab>
+            <tab heading="Photos" #photoTab="tab" class="gallery">
+                @if(photoTab.active){
+                    <gallery [items]="images"></gallery>
+                }
+            </tab>
+            <tab heading="Messages" (selectTab)="onTabActivated($event)">
+                <app-member-messages [username]="member.userName" [messages]="messages"></app-member-messages>
+            </tab>
+        </tabset>
+    </div>
+</div> 
