--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -3,6 +3,12 @@
         <div class="card">
             <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
             <div class="card-body">
+                @if((presenceService.onlineUsers$ | async)?.includes(member.userName)){
+                    <div class="mb-2">
+                        <i class="class fa fa-user-circle text-success"></i>
+                        Online now
+                    </div>
+                }
                 <div>
                     <strong>Location:</strong>
                     <p>{{member.city}}, {{member.country}}</p>
@@ -13,7 +19,7 @@
                 </div>
                 <div>
                     <strong>Last Active:</strong>
-                    <p>{{ member.lastActive + 'Z' | timeago}}</p>
+                    <p>{{ member.lastActive | timeago}}</p>
                 </div>
                 <div>
                     <strong>Member since:</strong>
@@ -45,7 +51,7 @@
                 }
             </tab>
             <tab heading="Messages" (selectTab)="onTabActivated($event)">
-                <app-member-messages [username]="member.userName" [messages]="messages"></app-member-messages>
+                <app-member-messages [username]="member.userName"></app-member-messages>
             </tab>
         </tabset>
     </div>
